# orehov

./: README.md  main.py  pyproject.toml
.github/workflows/: .gitinore
ui/: interface.py
