[project]
name = "password-generator"
version = "1.0.0"
description = "Простой генератор паролей с графическим интерфейсом"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "https://github.com/your-username/password-generator"
Repository = "https://github.com/your-username/password-generator.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
